implantação da responsividade em todas as páginas

--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,6 @@
     <main>
         <form action="#" method="post">
             <fieldset>
-                <!-- mudar de h1 para legend -->
                 <legend>Contato</legend>
                 <label class="campos">
                     <span class="screen-reader-only">nome</span>
@@ -48,6 +47,7 @@
                 <button type="submit">Enviar</button>
             </fieldset>
         </form>
+        <img src="assets/images/ilustra-contato.png"></img>
     </main>
     <footer>
         <div class="container">
