--- a/curso.html
+++ b/curso.html
@@ -84,8 +84,8 @@
             </nav>
             <div class="links-footer">
                 <ul>
-                    <li><a href="#">Quero ser professor</a></li>
-                    <li><a href="#">aqui tem outro link</a></li>
+                    <li><a href="contato.html">Quero ser professor</a></li>
+                    <li><a href="contato.html">aqui tem outro link</a></li>
                 </ul>
             </div>
         </div>
