--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div>
                 <h1>Educação <br> Financeira <br>é tudo de bom</h1>
                 <p>Vem comigo que te mostro <br> por onde começar</p>
-                <a href="">quero saber mais</a>
+                <a href="blog.html">quero saber mais</a>
             </div>
             <div class="bg-banner"></div>
         </section>
